# crawling

./: .gitignore  README.md  batch.py  chunks.py  main.py  message_batch_id.txt  message_batch_id_eeuu.txt  prompt.md  prompt_eeuu.md  pyproject.toml  results.py  tokens.py
chunks/: Historia General de Chile Tomo III_chunk_1.md  Historia General de Chile Tomo III_chunk_2.md  Historia General de Chile Tomo III_chunk_3.md  Historia General de Chile Tomo II_chunk_1.md  Historia General de Chile Tomo II_chunk_2.md  Historia General de Chile Tomo IV_chunk_1.md  Historia General de Chile Tomo IV_chunk_2.md  Historia General de Chile Tomo IX_chunk_1.md  Historia General de Chile Tomo IX_chunk_2.md  Historia General de Chile Tomo IX_chunk_3.md  Historia General de Chile Tomo IX_chunk_4.md  Historia General de Chile Tomo I_chunk_1.md  Historia General de Chile Tomo I_chunk_2.md  Historia General de Chile Tomo VIII_chunk_1.md  Historia General de Chile Tomo VIII_chunk_2.md  Historia General de Chile Tomo VIII_chunk_3.md  Historia General de Chile Tomo VIII_chunk_4.md  Historia General de Chile Tomo VII_chunk_1.md  Historia General de Chile Tomo VII_chunk_2.md  Historia General de Chile Tomo VII_chunk_3.md  Historia General de Chile Tomo VI_chunk_1.md  Historia General de Chile Tomo VI_chunk_2.md  Historia General de Chile Tomo VI_chunk_3.md  Historia General de Chile Tomo V_chunk_1.md  Historia General de Chile Tomo V_chunk_2.md  Historia General de Chile Tomo V_chunk_3.md  Historia General de Chile Tomo XIV_chunk_1.md  Historia General de Chile Tomo XIV_chunk_2.md  (+15 more)
(+863 files in other folders)
